--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Software Development with Style!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-heading">Mobile & Web</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
