--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -177,7 +177,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-brand {
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #{{ site.color.primary }};
+    color: #ffffff;
 }
 
 .navbar-default .navbar-brand:hover,
