--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,8 +13,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">You know your market very well</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">You know your market very well?</h4>
+                    <p class="text-muted">It's time to start your own company</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
