--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Software Development with Style</div>
-                <div class="intro-heading">İBNE BURAK</div>
+                <div class="intro-heading">CTO as a Service</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
