--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; {{ site.title }} 2015 </br> Mahlowerstr. 24, 12049 </br> Berlin Germany</span>
+                    <span class="copyright">Copyright &copy; {{ site.title }} 2015 </br> Mahlowerstr. 24, 12049 </br> Berlin - Germany</span>
                 </div>
                 
                 <div class="col-md-4">
