--- a/_includes/services.html
+++ b/_includes/services.html
@@ -22,7 +22,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">We undertake technical staff</h4>
-                    <p class="text-muted">You are good in sales and marketing. We take the other half over.</p>
+                    <p class="text-muted">You are good in sales and marketing. We take over the other half.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
