--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
+                    <h2 class="section-heading">Services - Option to Pay in Equity</h2>
                     <h3 class="section-subheading text-muted">We are affordable but you can also <b>pay in equity</b></h3>
                 </div>
             </div>
