--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                 
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                        <li><a href="http://ideava.com/privacy.html">Privacy Policy</a>
                         </li>
                         <li><a href="#">Terms of Use</a>
                         </li>
