--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+<meta http-equiv="refresh" content="0; url=http://ideava.com">
+<link rel="canonical" href="ideava.com/" />
+
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
