--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-<meta http-equiv="refresh" content="0;URL='http://ideava.com/'" />
+<meta http-equiv="refresh" content="1000;URL='http://ideava.com/'" />
 
-<link rel="canonical" href="ideava.com/" /> 
+<link rel="canonical" href="http://ideava.com/" /> 
 
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
