--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,46 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-<meta http-equiv="refresh" content="0;URL='http://ideava.com/'" />
+
+
+<SCRIPT LANGUAGE="Javascript">
+<!-- Hide from older browsers
+function setCookie(name, value, expire) {
+	strCookie = name + "=" + escape(value);
+	if (expire) strCookie += ";
+	expires=" + expire.toGMTString();
+	document.cookie = strCookie;
+}
+
+function getCookie(Name) {
+var search = Name + "="
+if (document.cookie.length > 0) {
+	// if there are any cookies
+	offset = document.cookie.indexOf(search)
+	if (offset != -1) {
+		// if cookie exists
+		offset += search.length
+		// set index of beginning of value
+		end = document.cookie.indexOf(";", offset)
+		// set index of end of cookie value
+		if (end == -1) end = document.cookie.length;
+                return unescape(document.cookie.substring(offset, end))
+            }
+        }
+    }
+
+var temp = getCookie('refreshed');
+if(temp!=1){
+	setCookie('refreshed', 1);
+	document.write("<meta http-equiv="refresh" content="0;URL='http://ideava.com/'" />");
+}
+// End hiding -->
+</script>
+
+
+
+
+
 
 <link rel="canonical" href="http://ideava.com/" /> 
 
