--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 <!-- Hide from older browsers
 function setCookie(name, value, expire) {
 	strCookie = name + "=" + escape(value);
-	if (expire) strCookie += ";
+	if (expire) strCookie += "";
 	expires=" + expire.toGMTString();
 	document.cookie = strCookie;
 }
