--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+<link rel="canonical" href="http://ideava.com/" /> 
 
 
 <SCRIPT LANGUAGE="Javascript">
-<!-- Hide from older browsers
+
 function setCookie(name, value, expire) {
 	strCookie = name + "=" + escape(value);
-	if (expire) strCookie += ";
+	if (expire) strCookie += "
 	expires=" + expire.toGMTString();
 	document.cookie = strCookie;
 }
@@ -46,7 +47,6 @@ if(temp!=1){
 
 
 
-<link rel="canonical" href="http://ideava.com/" /> 
 
 
 
