--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
 function setCookie(name, value, expire) {
 	strCookie = name + "=" + escape(value);
-	if (expire) strCookie += "
+	if (expire) strCookie += ";
 	expires=" + expire.toGMTString();
 	document.cookie = strCookie;
 }
