--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Pay in Cash or in Equity</h2>
-                    <h3 class="section-subheading text-muted">We are affordable but you can also <b>pay in equity</b></h3>
+                    <h3 class="section-subheading text-muted">We are affordable but you can also <b>pay in equity</b>
+                    </br> Ideava helps startups which need technical co-founder or CTO to get ready for their market. Founders pay us in cash or in equity to have their product ready for elevator pitch to investors and first customers.
+                    
+                    </h3>
                 </div>
             </div>
             <div class="row text-center">
