--- a/_includes/services.html
+++ b/_includes/services.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Pay in Cash or in Equity</h2>
                     <h3 class="section-subheading text-muted">We are affordable but you can also <b>pay in equity</b>
-                    </br> <p></p>Ideava helps startups which need technical co-founder or CTO to get ready for their market. </p></br><p></p>Founders pay us in cash or in equity to have their product ready for elevator pitch to investors and first customers.</p>
+                    </br> <p></p>Ideava helps startups which need technical co-founder or CTO to get ready for their market. </p></br><p>Founders pay us in cash or in equity to have their product ready for elevator pitch to investors and first customers.</p>
                     
                     </h3>
                 </div>
