--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Software Development with Style</div>
+                <div class="intro-lead-in">Your Technical Co-founder </div>
                 <div class="intro-heading">CTO as a Service</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
