--- a/_includes/head.html
+++ b/_includes/head.html
@@ -67,4 +67,28 @@ if(temp!=1){
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+    <script type="text/javascript">
+(function(e, t) {
+    function r(e, t) {
+        e[t] = function() {
+            e.push([ t ].concat(Array.prototype.slice.call(arguments, 0)));
+        };
+    }
+    var n = "JacoRecorder";
+    (function(e, t, i, s) {
+        if (!i.__VERSION) {
+            e[n] = i;
+            var o = [ "init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo" ];
+            for (var u = 0; u < o.length; u++) r(i, o[u]);
+            i.__VERSION = .9, i.__INIT_TIME = 1 * new Date;
+            var a = t.createElement("script");
+            a.async = !0, a.setAttribute("crossorigin", "anonymous"), a.src = s;
+            var f = t.getElementsByTagName("head")[0];
+            f.appendChild(a);
+        }
+    })(e, t, e[n] || [], "//recorder-assets.getjaco.com/recorder.js");
+}).call(window, window, document), window.JacoRecorder.push([ "init", "96f159c8-3fd3-4c4a-928e-30c3ec79ea2f", {} ]);
+</script>
+    
 </head>
