--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,9 @@
                     id:37152085,
                     clickmap:true,
                     trackLinks:true,
-                    accurateTrackBounce:true
+                    accurateTrackBounce:true,
+                    webvisor:true,
+                    trackHash:true
                 });
             } catch(e) { }
         });
