--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" action="//formspree.io/mail@alperozturk.com" novalidate>
+                    <form name="sentMessage" id="contactForm" action="//formspree.io/info@ideava.com" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
