--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -264,7 +264,7 @@ fieldset[disabled] .btn-xl.active {
 
 header {
     text-align: center;
-    color: #fff;
+    color: #000000;
     background-attachment: scroll;
     background-image: url(img/designsprintimage.jpg);
     background-position: center center;
