--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,8 +36,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Software Development with Style </div>
-                <div class="intro-heading">CTO as a Service</div>
+                <div class="intro-lead-in">Design Sprints </div>
+                <div class="intro-heading">Better Product & Business Decisions </div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
